# gizmo-3d

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  run_example.sh
cmake/: gizmo3dConfig.cmake.in
doc/: README.md  index.md
doc/api-reference/: gizmo-math.md  global-gizmo.md  rotation-gizmo.md  scale-gizmo.md  translation-gizmo.md
doc/architecture/: coordinate-mapping.md  overview.md  rendering.md  signal-pattern.md
doc/developer-guide/: adding-gizmos.md  building.md  code-organization.md  contributing.md  testing.md
doc/examples/: basic-usage.md
doc/getting-started/: installation.md  quick-start.md
doc/troubleshooting/: common-issues.md
doc/user-guide/: controller-pattern.md  snapping.md  transform-modes.md
examples/: CMakeLists.txt  SimpleController.qml  main.cpp  main.qml
examples/benchmark/: main.cpp  main.qml
examples/stress_test/: SimpleController.qml  main.cpp  main.qml
src/: CMakeLists.txt  GizmoEnums.qml  GizmoMath.qml  GizmoProjection.qml  GlobalGizmo.qml  MockProjection.qml  RotationGizmo.qml  ScaleGizmo.qml  TranslationGizmo.qml  View3DProjectionAdapter.qml
src/drawing/: ArrowPrimitive.qml  ArrowRenderer.qml  CirclePrimitive.qml  CircleRenderer.qml  PlanePrimitive.qml  PlaneRenderer.qml  ScaleArrowRenderer.qml  SquareHandlePrimitive.qml  SquareHandleRenderer.qml
src/geometry/: GeometryTemplates.qml  HitTester.qml  RotationGeometryCalculator.qml  ScaleGeometryCalculator.qml  TranslationGeometryCalculator.qml  rotationgeometrycalculator.cpp  rotationgeometrycalculator.h
tests/: CMakeLists.txt  UI_TESTS_README.md  tst_gizmo_controller_integration.qml  tst_gizmo_coordinate_transform.qml  tst_gizmo_edge_cases.qml  tst_gizmo_transform_hierarchy.qml  tst_gizmo_visual_feedback.qml  tst_qml_main.cpp  tst_rotation_circle_geometry.qml  tst_rotationgizmo.cpp  tst_rotationgizmo_interaction.qml  tst_rotationgizmo_snap.cpp  tst_rotationgizmo_snap.qml  tst_scalegizmo.cpp  tst_snap.qml  tst_translationgizmo.cpp  tst_translationgizmo_interaction.qml  tst_translationgizmo_snap.cpp
tests/drawing/: tst_arrowprimitive.cpp  tst_circleprimitive.cpp  tst_planeprimitive.cpp  tst_squarehandleprimitive.cpp
